fix: corrigir bugs de navegação e referências após remoção dos desafios
- Corrigir página inicial para mostrar timeline em vez de estudos
- Remover referências ao challengesContainer que não existe mais
- Corrigir navegação para começar na home sem aba ativa
- Garantir que todas as funções funcionem sem referências aos desafios

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 onclick="showHome()" style="cursor: pointer;">CommitToLearn</h1>
         <p>Cada commit é um passo na jornada do conhecimento.</p>
         <nav>
-            <a href="#" onclick="showStudies()" id="nav-estudos" class="active">Estudos</a>
+            <a href="#" onclick="showStudies()" id="nav-estudos">Estudos</a>
             <a href="#" onclick="showArticles()" id="nav-artigos">Artigos</a>
         </nav>
     </header>
