--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/go.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/python.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/dockerfile.min.js"></script>
     
     <!-- Inicialização do highlight.js -->
     <script>
@@ -90,7 +91,7 @@
             if (typeof hljs !== 'undefined') {
                 // Define as linguagens suportadas para syntax highlighting
                 hljs.configure({
-                    languages: ['java', 'python', 'go', 'javascript', 'bash', 'shell']
+                    languages: ['java', 'python', 'go', 'javascript', 'dockerfile', 'bash', 'shell']
                 });
             }
         });
